@@ -1,5 +1,9 @@
 2005-06-04  Bruno Haible  <bruno@clisp.org>
 
+	* lispbibl.d (convert_time_from_universal): New declaration.
+
+2005-06-04  Bruno Haible  <bruno@clisp.org>
+
 	* lispbibl.d (my_realloc): New declaration.
 
 2005-06-04  Bruno Haible  <bruno@clisp.org>
